@@ -6,28 +6,28 @@ import java.util.Collections;
 import java.util.List;
 
 public class MyTree {
-    class Node {
-        List<Integer> keys;
-        List<Node> children;
+    private class Node {
+        ArrayList<Integer> keys;
+        ArrayList<Node> children;
         Node parent;
         int keyCount;
 
-        public Node() {
+        private Node() {
         }
 
-        public Node(Integer integer) {
+        private Node(Integer integer) {
             this.keys = new ArrayList<>(3);
             this.children = new ArrayList<>(4);
             this.keyCount = 0;
         }
 
-        public void addKey(Integer key) {
+        private void addKey(Integer key) {
             this.keys.add(key);
             keyCount++;
             Collections.sort(keys);
         }
 
-        public boolean isLeaf() {
+        private boolean isLeaf() {
             for (Node n : children) {
                 if (n != null) {
                     return false;
@@ -36,22 +36,26 @@ public class MyTree {
             return true;
         }
 
-        public Node goToLeaf(Integer key) {
+        private Node goToLeaf(Integer key) {
             Node current = this;
             while (!current.isLeaf()) {
-                if (current.keys.contains(key)) {
-                    return current;
+                if (current.keys.contains(key)) { // find duplicated key
+                    return null;
+                }
+                if (current.keyCount == 1) { // find a 1key node to add
+                    current.addKey(key);
+                    return null;
                 }
 
                 if (this.keyCount == 1) {
-                    if (key < current.keys.getFirst()) {
-                        current = current.children.getFirst();
+                    if (key < current.keys.get(0)) {
+                        current = current.children.get(0);
                     } else {
                         current = current.children.get(2);
                     }
                 } else if (this.keyCount == 2) {
                     if (key < current.keys.get(0)) {
-                        current = current.children.getFirst();
+                        current = current.children.get(0);
                     } else if (key < current.keys.get(1)) {
                         current = current.children.get(2);
                     } else {
@@ -63,26 +67,102 @@ public class MyTree {
             return current;
         }
 
-        public boolean keyExists(Integer key) {
+        private boolean isKeyExists(Integer key) {
             if (key != null) {
-                return key.equals(this.keys.getFirst()) || key.equals(this.keys.get(1));
+                return key.equals(this.keys.get(0)) || key.equals(this.keys.get(1));
             }
             return false;
         }
 
+        /**
+         * Find which child is this node
+         *
+         * @return 1, it's left
+         * 2, it's mid
+         * 3, it's right
+         * 4, new added, (won't happen)
+         */
+        private int whichChild() {
+            return parent.children.indexOf(this);
+        }
+
+        private void absorb(Node promotion) {
+            promotion.children.add(promotion.children.get(2)); // copy mid-child to right to make enough space for 3 children
+            this.addKey(promotion.keys.get(0));
+            switch (whichChild()) {
+                case 0:
+                    this.children.set(0, promotion.children.get(0));
+                    this.children.set(1, promotion.children.get(1));
+                case 2:
+                    this.children.set(1, promotion.children.get(0));
+                    this.children.set(2, promotion.children.get(1));
+            }
+            for (Node child : promotion.children) {
+                child.parent = this;
+            }
+        }
+
+        private Node splitLeaf() {
+            Node newLeft = new Node(this.keys.get(0));
+            Node newRight = new Node(this.keys.get(2));
+            Node promotionToParent = new Node();
+            promotionToParent.keys.add(this.keys.get(1));
+            promotionToParent.children.add(newLeft);
+            promotionToParent.children.add(newRight);
+            return promotionToParent;
+        }
+
+
+        private Node absorbAndSplit(Node promotion) {
+            Node left = new Node();
+            Node right = new Node();
+            Node toParent = new Node();
+
+            this.addKey(promotion.keys.get(0)); // add new key and sort
+
+            // add key to the 3 nodes
+            left.addKey(this.keys.get(0));
+            right.addKey(this.keys.get(2));
+            toParent.addKey(this.keys.get(1));
+
+            // link them
+            left.parent = toParent;
+            right.parent = toParent;
+            toParent.children.add(left);
+            toParent.children.add(right);
+
+            // split this to left and right
+            switch (whichChild()) {
+                case 0:
+                    left.children.add(promotion.children.get(0));
+                    left.children.add(promotion.children.get(1));
+                    promotion.children.get(0).parent = left;
+                    promotion.children.get(1).parent = left;
+                    right.children.add(this.children.get(1));
+                    right.children.add(this.children.get(2));
+                case 1:
+                    left.children.add(this.children.get(0));
+                    left.children.add(promotion.children.get(0));
+                    right.children.add(promotion.children.get(1));
+                    promotion.children.get(0).parent = left;
+                    promotion.children.get(1).parent = right;
+                    right.children.add(this.children.get(2));
+                case 2:
+                    left.children.add(this.children.get(0));
+                    left.children.add(this.children.get(1));
+                    right.children.add(promotion.children.get(0));
+                    right.children.add(promotion.children.get(1));
+                    promotion.children.get(0).parent = right;
+                    promotion.children.get(1).parent = right;
+            }
+
+            return toParent;
+        }
     }
 
     Node root;
     int size;
 
-    class Promotion {
-        Integer key;
-        Node newLeft;
-        Node newRight;
-
-        private Promotion() {
-        }
-    }
 
     public MyTree() {
         this.root = new Node();
@@ -90,7 +170,7 @@ public class MyTree {
     }
 
     public MyTree(ArrayList<Integer> keys) {
-        root = new Node(keys.getFirst());
+        root = new Node(keys.get(0));
         for (int i = 1; i < keys.size(); i++) {
             this.insert(keys.get(i));
         }
@@ -112,8 +192,8 @@ public class MyTree {
 
         // case 2: go to leaf
         Node leaf = root.goToLeaf(key);
-        if (leaf.keyExists(key)) {
-            return;  // check if key exists in leaf
+        if (leaf == null || leaf.keys.contains(key)) {
+            return;  // key exists in leaf || key has been added to any node on the path || found duplicate
         }
 
         // insert leaf
@@ -124,30 +204,29 @@ public class MyTree {
             return;
         }
 
-        // case 2: leaf has 2 keys, split needs
-        Promotion sendToParent;
-        if (leaf.keyCount == 2) {
-            leaf.addKey(key);
-            sendToParent = splitLeaf(leaf);
-        }
+        // case 2: leaf has 2 keys, split
+        Node promoting;
+        leaf.addKey(key);
+        promoting = leaf.splitLeaf();
+
 
         // loop to root, 2keys node split and passing up, 1key node absorb.
         Node current = leaf;
-        while(root != current){
-
+        while (root != current) {
+            if (current.keyCount == 1) {
+                current.absorb(promoting);
+            } else if (current.keyCount == 2) {
+                promoting = current.absorbAndSplit(promoting);
+            }
+            current = current.parent;
         }
 
-
-    }
-
-    private Promotion splitLeaf(Node leaf) {
-        Node newLeft = new Node(leaf.keys.getFirst());
-        Node newRight = new Node(leaf.keys.get(2));
-        Promotion toParent = new Promotion();
-        toParent.key = leaf.keys.get(1);
-        toParent.newLeft = newLeft;
-        toParent.newRight = newRight;
-        return toParent;
+        // now current is root
+        if (current.keyCount == 1) {
+            current.absorb(promoting);
+        } else if (current.keyCount == 2) {
+            root = current.absorbAndSplit(promoting);
+        }
     }
 
 
